[gd_scene load_steps=4 format=2]

[ext_resource path="res://Serial/SimpleConsole.gd" type="Script" id=1]
[ext_resource path="res://Serial/Com.gd" type="Script" id=2]
[ext_resource path="res://Serial/HSlider2.gd" type="Script" id=3]

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 43.0
margin_top = 85.3383
margin_right = 457.0
margin_bottom = 119.338

[node name="SendButton" type="Button" parent="."]
margin_left = 494.0
margin_top = 78.3383
margin_right = 553.0
margin_bottom = 130.338
text = "Send"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 454.168
margin_top = 448.503
margin_right = 564.168
margin_bottom = 468.503
hint_tooltip = "Baudrate selection is what will open the port
"

[node name="Baudrate" type="Label" parent="."]
margin_left = 374.168
margin_top = 452.503
margin_right = 449.168
margin_bottom = 466.503
text = "Baudrate:"
uppercase = true

[node name="Com" type="Node" parent="."]
script = ExtResource( 2 )
endline = "
"

[node name="UpdateButton" type="Button" parent="."]
margin_left = 231.168
margin_top = 443.503
margin_right = 262.168
margin_bottom = 469.503
hint_tooltip = "Refresh Port list"
text = "R"

[node name="PortList" type="OptionButton" parent="."]
margin_left = 108.168
margin_top = 440.503
margin_right = 217.168
margin_bottom = 467.503

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 58.1645
margin_top = 157.671
margin_right = 449.164
margin_bottom = 398.671
bbcode_enabled = true
scroll_following = true

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 500.438
margin_top = 164.832
margin_right = 579.438
margin_bottom = 190.832
hint_tooltip = "Adds endline at the end of the text sended
"
text = "w/endline"

[node name="Title" type="Label" parent="."]
margin_left = 190.457
margin_top = 45.1125
margin_right = 345.457
margin_bottom = 64.1125
text = "BASIC SERIAL MONITOR"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 332.0
margin_top = 379.0
margin_right = 563.0
margin_bottom = 424.0
max_value = 180.0
value = 90.0
rounded = true
ticks_on_borders = true

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 69.1354
margin_top = 184.361
margin_right = 288.135
margin_bottom = 200.361
max_value = 180.0
value = 90.0
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="HSlider2"]

[connection signal="gui_input" from="LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="UpdateButton" to="." method="_on_UpdateButton_pressed"]
[connection signal="item_selected" from="PortList" to="." method="_on_PortList_item_selected"]
[connection signal="value_changed" from="HSlider" to="HSlider2" method="_on_HSlider_value_changed"]
[connection signal="update_servo" from="HSlider2" to="." method="_on_HSlider2_update_servo"]
[connection signal="tween_completed" from="HSlider2/Tween" to="HSlider2" method="_on_Tween_tween_completed"]
